<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.ui.attendance.StudentAttendanceFragment">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_Attendance_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_grade_LastPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade" />

        <EditText
            android:id="@+id/edt_Male_Attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_male_student"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edt_Female_Attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_female_student"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="253dp"
            android:layout_height="72dp"
            android:layout_marginTop="220dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_Previous_Attenance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/previous" />

            <Button
                android:id="@+id/btn_Next_Attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>