<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.ui.addschool.AddSchoolActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="314dp"
            android:layout_height="98dp"
            app:srcCompat="@drawable/pencil_bucket"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/tv_addSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/add_your_school"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edt_AddSchoolName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/hint_school_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edt_AddSchoolEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/hint_school_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edt_AddSchoolNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/hint_school_number"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edt_AddAddress"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_address"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btn_addSchool"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/continue_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>