<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.ui.auth.MobileNumberVerificationActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/pencil_case"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="330dp"
        android:layout_height="118dp"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/smart_school_attendance"
        android:textAlignment="center"
        android:textColor="@color/LocalBrown"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="13dp">

        <EditText
            android:id="@+id/edt_createAcc_email"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_email" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_DialCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="+27"
                android:inputType="number" />

            <EditText
                android:id="@+id/edt_CreateAcc_Number"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter your mobile number"
                android:inputType="number" />


        </LinearLayout>



        <EditText
            android:id="@+id/edt_createAcc_password"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_password" />

        <EditText
            android:id="@+id/edt_createAcc_confirm_password"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_confirm_password" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_createAcc"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/RegisteredUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_registered_login"
        android:textAlignment="center"
        android:textColor="@color/LocalBrown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_createAcc" />

</androidx.constraintlayout.widget.ConstraintLayout>